// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skew renders 0 1`] = `
Array [
  .c0 {
  -webkit-transform: skew(0);
  -ms-transform: skew(0);
  transform: skew(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(0);
  -ms-transform: skew(0);
  transform: skew(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(0);
  -ms-transform: skew(0);
  transform: skew(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(0);
  -ms-transform: skew(0);
  transform: skew(0);
}

<div
    className="c0"
  />,
]
`;

exports[`skew renders function 1`] = `
Array [
  .c0 {
  -webkit-transform: skew(hasnot);
  -ms-transform: skew(hasnot);
  transform: skew(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(has);
  -ms-transform: skew(has);
  transform: skew(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(hasnot);
  -ms-transform: skew(hasnot);
  transform: skew(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(has);
  -ms-transform: skew(has);
  transform: skew(has);
}

<div
    className="c0"
  />,
]
`;

exports[`skew renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: skew(invalid.path.1);
  -ms-transform: skew(invalid.path.1);
  transform: skew(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(invalid.path.1);
  -ms-transform: skew(invalid.path.1);
  transform: skew(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(invalid.path.1);
  -ms-transform: skew(invalid.path.1);
  transform: skew(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(invalid.path.1);
  -ms-transform: skew(invalid.path.1);
  transform: skew(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`skew renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transform: skew(-54881);
  -ms-transform: skew(-54881);
  transform: skew(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(-54881);
  -ms-transform: skew(-54881);
  transform: skew(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(-42365);
  -ms-transform: skew(-42365);
  transform: skew(-42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(-42365);
  -ms-transform: skew(-42365);
  transform: skew(-42365);
}

<div
    className="c0"
  />,
]
`;

exports[`skew renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(July);
    -ms-transform: skew(July);
    transform: skew(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(August);
    -ms-transform: skew(August);
    transform: skew(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(September);
    -ms-transform: skew(September);
    transform: skew(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: skew(November);
    -ms-transform: skew(November);
    transform: skew(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(July);
    -ms-transform: skew(July);
    transform: skew(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(August);
    -ms-transform: skew(August);
    transform: skew(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(September);
    -ms-transform: skew(September);
    transform: skew(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: skew(November);
    -ms-transform: skew(November);
    transform: skew(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(May);
    -ms-transform: skew(May);
    transform: skew(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(June);
    -ms-transform: skew(June);
    transform: skew(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(April);
    -ms-transform: skew(April);
    transform: skew(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: skew(November);
    -ms-transform: skew(November);
    transform: skew(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(May);
    -ms-transform: skew(May);
    transform: skew(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(June);
    -ms-transform: skew(June);
    transform: skew(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: skew(April);
    -ms-transform: skew(April);
    transform: skew(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: skew(November);
    -ms-transform: skew(November);
    transform: skew(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`skew renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-transform: skew(July);
    -ms-transform: skew(July);
    transform: skew(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: skew(August);
    -ms-transform: skew(August);
    transform: skew(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: skew(September);
    -ms-transform: skew(September);
    transform: skew(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: skew(November);
    -ms-transform: skew(November);
    transform: skew(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: skew(August);
    -ms-transform: skew(August);
    transform: skew(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transform: skew(July);
    -ms-transform: skew(July);
    transform: skew(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: skew(August);
    -ms-transform: skew(August);
    transform: skew(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: skew(September);
    -ms-transform: skew(September);
    transform: skew(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: skew(November);
    -ms-transform: skew(November);
    transform: skew(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: skew(August);
    -ms-transform: skew(August);
    transform: skew(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: skew(January);
    -ms-transform: skew(January);
    transform: skew(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: skew(December);
    -ms-transform: skew(December);
    transform: skew(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: skew(April);
    -ms-transform: skew(April);
    transform: skew(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: skew(May);
    -ms-transform: skew(May);
    transform: skew(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: skew(June);
    -ms-transform: skew(June);
    transform: skew(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: skew(January);
    -ms-transform: skew(January);
    transform: skew(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: skew(December);
    -ms-transform: skew(December);
    transform: skew(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: skew(April);
    -ms-transform: skew(April);
    transform: skew(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: skew(May);
    -ms-transform: skew(May);
    transform: skew(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: skew(June);
    -ms-transform: skew(June);
    transform: skew(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`skew renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transform: skew(54881);
  -ms-transform: skew(54881);
  transform: skew(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(54881);
  -ms-transform: skew(54881);
  transform: skew(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(42365);
  -ms-transform: skew(42365);
  transform: skew(42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(42365);
  -ms-transform: skew(42365);
  transform: skew(42365);
}

<div
    className="c0"
  />,
]
`;

exports[`skew renders string 1`] = `
Array [
  .c0 {
  -webkit-transform: skew(July);
  -ms-transform: skew(July);
  transform: skew(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(July);
  -ms-transform: skew(July);
  transform: skew(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(June);
  -ms-transform: skew(June);
  transform: skew(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(June);
  -ms-transform: skew(June);
  transform: skew(June);
}

<div
    className="c0"
  />,
]
`;

exports[`skew renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: skew(DarkSlateBlue);
  -ms-transform: skew(DarkSlateBlue);
  transform: skew(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(DarkSlateBlue);
  -ms-transform: skew(DarkSlateBlue);
  transform: skew(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(DarkSlateBlue);
  -ms-transform: skew(DarkSlateBlue);
  transform: skew(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: skew(DarkSlateBlue);
  -ms-transform: skew(DarkSlateBlue);
  transform: skew(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
